apps/twenty/twenty-change-vol-ownership-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: twenty-change-vol-ownership
  name: twenty-change-vol-ownership
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: twenty-change-vol-ownership
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: twenty-change-vol-ownership
    spec:
      containers:
        - args:
            - bash
            - -c
            - ' chown -R 1000:1000 /tmp/server-local-data && chown -R 1000:1000 /tmp/docker-data'
          image: ubuntu
          name: twenty-change-vol-ownership
          volumeMounts:
            - mountPath: /tmp/server-local-data
              name: twenty-server-local-data
            - mountPath: /tmp/docker-data
              name: twenty-docker-data
      restartPolicy: Always
      volumes:
        - name: twenty-server-local-data
          persistentVolumeClaim:
            claimName: twenty-server-local-data
        - name: twenty-docker-data
          persistentVolumeClaim:
            claimName: twenty-docker-data
