apps/twenty/twenty-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: twenty-worker
  name: twenty-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: twenty-worker
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: twenty-worker
    spec:
      containers:
        - args:
            - yarn
            - worker:prod
          image: "twentycrm/twenty:"
          name: twenty-worker
      restartPolicy: Always
