apps/twenty/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: twentycrm-server
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: twentycrm-server
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
