apps/twenty/twenty-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: twenty-server
  name: twenty-server
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
    - name: "3001"
      port: 3001
      targetPort: 3001
  selector:
    io.kompose.service: twenty-server
